--- a/css/stayles.css
+++ b/css/stayles.css
@@ -4,6 +4,11 @@
     --logo_color:#4D5AE5;
     --margin_button:120px;
     --padding_button:120px;
+    --transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    --transition_back:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    --transition_clr:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    --transition_ops:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    --transition_shadow:box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 h1, h2, h3, h4, h5, h6, p{
     margin: 0;
@@ -70,6 +75,8 @@ body{
     color: var(--main_font_color);
     letter-spacing: 0.02em;
     padding: 24px 0;
+    position: relative;
+    transition: var(--transition_clr);
 }
 .header_address{
     display: inline-block;
@@ -93,17 +100,32 @@ body{
     font-style: normal;
     letter-spacing: 0.02em;
     padding: 24px 0;
+    transition: var(--transition_clr);
 }
 .header_address_tel_link:hover, .header_address_mail_link:hover,.header_address_tel_link:focus,
 .header_address_mail_link:focus{
     color:var(--logo_color);
 }
+.header_link:hover::before,
+.header_link.current::before,
 .header_link:hover, 
 .header_link:focus,
 .header_link.current{
     color:var(--logo_color);
+    transform: scale(1);
 }
 
+.header_link::before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 8px;
+    background: #404BBF;
+    border-radius: 2px;
+    transform: scale(0);
+    transition: var(--transition)
+}
 .caption{
     max-width: 1440px;
     margin: 0 auto;
@@ -139,9 +161,10 @@ body{
     border-radius: 4px;
     border: 1px solid transparent;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .caption_btn:hover, .caption_btn:focus{
-    background: #404BBF;
+    background-color: #404BBF;
 }
 .content_title{
     margin-bottom: 72px;
@@ -204,6 +227,7 @@ body{
     height: 100%;
     border-radius: 50%;
     background-color: #4D5AE5;
+    transition: var(--transition_back);
 }
 .box_list_social_link:hover, 
 .box_list_social_link:focus{
@@ -281,12 +305,12 @@ body{
     border: 1px solid #8E8F99;
     border-radius: 4px;
     fill: #8E8F99;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .logo-list-item-link:hover,
 .logo-list-item-link:focus{
     border-color: #404BBF;
-    border-radius: 4px;
     fill: #404BBF;
 }
 .customers{
@@ -352,6 +376,7 @@ body{
     height: 100%;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
+    transition: var(--transition_back)
 }
 
 .btn_list{
@@ -372,9 +397,10 @@ body{
     padding: 12px 24px;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
+    transition: var(--transition_shadow), var(--transition_back), var(--transition_clr);
 }
 .btn_item:hover, .btn_item:focus{
-    background: #404BBF;
+    background-color: #404BBF;
     color: #fff;
     border-color:transparent;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -382,6 +408,9 @@ body{
 .section{
     padding-bottom: var(--padding_button);
     padding-top: 96px;
+}
+.section_items_link{
+    transition: var(--transition_shadow)
 }
 .section_items_title_text{
     border-bottom: 1px solid #E7E9FC;
@@ -428,4 +457,81 @@ body{
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     margin: -1px;
+}
+
+.section_items_img{
+    position: relative;
+    overflow: hidden;
+}
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #404BBF;
+    transform: translateY(100%);
+    transition: var(--transition);
+}
+.section_items_img_block_text{
+    color: #F4F4FD;
+    padding: 40px 32px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+.section_items_link:hover .overlay{
+    transform: translateY(0);
+}
+
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 47, 66, 0.4);
+    transition: var(--transition_ops);
+ 
+}
+.backdrop.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+}
+.backdrop.is-hidden .modal{
+    transform: translate(-50%, -50%) scale(1.11);
+
+}
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    min-width: 408px;
+    min-height: 576px;
+    background-color: #FFFFFF;
+    padding: 24px;
+    border-radius: 4px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: var(--transition);
+}
+.close_btn{
+    width: 24px;
+    height: 24px;
+    background: #E7E9FC;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close_btn:hover,
+.close_btn:focus{
+    background-color:#404BBF;
+    border-color: transparent;
+    fill: #FFFFFF;
 }
