--- a/css/stayles.css
+++ b/css/stayles.css
@@ -33,6 +33,7 @@ body{
     font-family: 'Roboto', sans-serif;
     color:var(--main_font_color);
     background: #FFFFFF;
+    padding-top: 72px;
 }
 .container{
     margin: 0 auto;
@@ -41,6 +42,13 @@ body{
     padding-right: 15px;
 }
 .header{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%);
+    z-index: 1;
+    background-color: #FFFFFF;
     border-bottom: 1px solid #E7E9FC;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
